--- a/braintree-demo/Views/Shared/_Layout.cshtml
+++ b/braintree-demo/Views/Shared/_Layout.cshtml
@@ -1,42 +1,43 @@
 ﻿<!DOCTYPE html>
+
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <meta name="viewport" content="width=device-width" />
+
+    <title>BraintreeASPExample</title>
+    <link rel=stylesheet type=text/css href="/App_Themes/css/app.css">
+    <link rel=stylesheet type=text/css href="/App_Themes/css/overrides.css">
+    <link rel="icon" type="image/png" href="/App_Themes/images/favicon.png">
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+    <header class="main">
+        <div class="container wide">
+            <div class="content slim">
+                <div class="set">
+                    <div class="fill">
+                        <a class="pseudoshop" href="/">PSEUDO<strong>SHOP</strong></a>
+                    </div>
+
+                    <div class="fit">
+                        <a class="braintree" href="https://developers.braintreepayments.com/guides/drop-in" target="_blank">Braintree</a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+        <div class="notice-wrapper">
+            @{
+                string flash = TempData["Flash"] as string;
+                if (flash != null)
+                {
+                    <div class="show notice error notice-error">
+                        <span class="notice-message">@flash</span>
+                    </div>
+                }
+            }
+        </div>
+    </header>
+
+    @RenderBody()
 </body>
 </html>
