--- a/BraintreeDemo/App_Themes/css/app.css
+++ b/BraintreeDemo/App_Themes/css/app.css
@@ -1891,6 +1891,8 @@ label[for="amount"] {
   label[for="amount"] {
     border: 1px solid #b5b5b5;
     border-radius: 3px;
+    margin: 10px;
+    width: 300px;
   }
 }
 
@@ -2518,4 +2520,10 @@ aside.drawer ::selection {
   background: rgba(255, 255, 255, 0.99);
   color: rgba(62, 60, 65, 0.99);
   text-shadow: none;
+}
+
+.user-info-section {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
 }
