Added the ability to store custom fields

--- a/BraintreeDemo/Views/Checkouts/New.cshtml
+++ b/BraintreeDemo/Views/Checkouts/New.cshtml
@@ -58,6 +58,11 @@
                     </div>
                 </label>
                 <label for="amount">
+                    <div class="input-wrapper">
+                        <input id="recipientId" name="recipientId" type="tel" placeholder="Recipient Id">
+                    </div>
+                </label>
+                <label for="amount">
                     <div class="input-wrapper amount-wrapper">
                         <input id="amount" name="amount" type="tel" min="1" placeholder="Amount">
                     </div>
